--- a/module2-sql-for-analysis/AssignmentWorkbook.ipynb
+++ b/module2-sql-for-analysis/AssignmentWorkbook.ipynb
@@ -2595,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4516,7 +4516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4525,7 +4525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -4533,32 +4533,23 @@
      "output_type": "stream",
      "text": [
       "INSERT INTO titanic \n",
-      "                (pclass, survived, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
+      "                (survived, pclass, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
       "                VALUES (1, 3, 'Miss. Ellen O''Dwyer', 'female', 24.0, 0, 0, 7.8792);\n",
       "INSERT INTO titanic \n",
-      "                (pclass, survived, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
-      "                VALUES (1, 3, 'Miss. Bridget O''Driscoll', 'female', 27.0, 0, 0, 7.75);\n",
-      "INSERT INTO titanic \n",
-      "                (pclass, survived, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
-      "                VALUES (1, 3, 'Mrs. Thomas (Johanna Godfrey) O''Brien', 'female', 26.0, 1, 0, 15.5);\n",
-      "INSERT INTO titanic \n",
-      "                (pclass, survived, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
-      "                VALUES (0, 3, 'Mr. Thomas O''Brien', 'male', 27.0, 1, 0, 15.5);\n",
-      "INSERT INTO titanic \n",
-      "                (pclass, survived, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
-      "                VALUES (0, 3, 'Mr. Maurice O''Connor', 'male', 17.0, 0, 0, 7.75);\n",
-      "INSERT INTO titanic \n",
-      "                (pclass, survived, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
-      "                VALUES (0, 3, 'Miss. Bridget Mary O''Sullivan', 'female', 21.0, 0, 0, 7.6292);\n",
-      "INSERT INTO titanic \n",
-      "                (pclass, survived, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
-      "                VALUES (0, 3, 'Mr. Timothy O''Brien', 'male', 21.0, 0, 0, 7.8292);\n",
-      "INSERT INTO titanic \n",
-      "                (pclass, survived, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
-      "                VALUES (0, 3, 'Mr. Patrick D O''Connell', 'male', 18.0, 0, 0, 7.7333);\n",
-      "INSERT INTO titanic \n",
-      "                (pclass, survived, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
-      "                VALUES (1, 3, 'Miss. Hanora O''Leary', 'female', 16.0, 0, 0, 7.8292);\n"
+      "                (survived, pclass, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
+      "                VALUES (1, 3, 'Miss. Bridget O''Driscoll', 'female', 27.0, 0, 0, 7.75);\n"
+     ]
+    },
+    {
+     "ename": "UndefinedTable",
+     "evalue": "relation \"titanic\" does not exist\nLINE 1: INSERT INTO titanic \n                    ^\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUndefinedTable\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-a933244e9204>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m                     \u001b[0;34m(\u001b[0m\u001b[0msurvived\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpclass\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msiblingsSpouses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparentsChildren\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfare\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                     VALUES'''+str(r[1:])+';'\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mpgquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minsertion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0;31m#print(insertion)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Volumes/Lambda/Unit_3/DS-Unit-3-Sprint-2-SQL-and-Databases/module2-sql-for-analysis/query.py\u001b[0m in \u001b[0;36mpgquery\u001b[0;34m(command)\u001b[0m\n\u001b[1;32m     13\u001b[0m                                password=password, host=host)\n\u001b[1;32m     14\u001b[0m     \u001b[0mpg_curs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpg_conn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mpg_curs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpg_curs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUndefinedTable\u001b[0m: relation \"titanic\" does not exist\nLINE 1: INSERT INTO titanic \n                    ^\n"
      ]
     }
    ],
@@ -4566,12 +4557,12 @@
     "for r in records:\n",
     "    if \"'\" in r[3]:\n",
     "        insertion='''INSERT INTO titanic \n",
-    "                (pclass, survived, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
+    "                (survived, pclass, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
     "                VALUES ('''+str(r[1])+', '+str(r[2])+', \\''+r[3].replace(\"'\", \"''\")+'\\', \\''+str(r[4])+'\\', '+str(r[5])+', '+str(r[6])+', '+str(r[7])+', '+str(r[8])+');'\n",
     "        print(insertion)\n",
     "    else:\n",
     "        insertion='''INSERT INTO titanic \n",
-    "                    (pclass, survived, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
+    "                    (survived, pclass, name, sex, age, siblingsSpouses, parentsChildren, fare)\n",
     "                    VALUES'''+str(r[1:])+';'\n",
     "    pgquery(insertion)\n",
     "    #print(insertion)"
@@ -4580,7 +4571,12 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "ename": "UndefinedTable",
@@ -4600,11 +4596,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "FATAL:  too many connections for role \"epgwreqv\"\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-47-c77024f12dfd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpgquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'SELECT * FROM titanic WHERE name=Miss. Ellen O\\'\\'Dwyer;'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Volumes/Lambda/Unit_3/DS-Unit-3-Sprint-2-SQL-and-Databases/module2-sql-for-analysis/query.py\u001b[0m in \u001b[0;36mpgquery\u001b[0;34m(command)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mhost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'salt.db.elephantsql.com'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     pg_conn = psycopg2.connect(dbname=dbname, user=user,\n\u001b[0;32m---> 13\u001b[0;31m                                password=password, host=host)\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mpg_curs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpg_conn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mpg_curs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/psycopg2/__init__.py\u001b[0m in \u001b[0;36mconnect\u001b[0;34m(dsn, connection_factory, cursor_factory, **kwargs)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m     \u001b[0mdsn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_ext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_dsn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdsn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 126\u001b[0;31m     \u001b[0mconn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_connect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdsn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconnection_factory\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconnection_factory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwasync\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    127\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcursor_factory\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m         \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor_factory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcursor_factory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: FATAL:  too many connections for role \"epgwreqv\"\n"
+     ]
+    }
+   ],
    "source": [
-    "pgquery('SELECT * FROM titanic LIMIT 20;')"
+    "pgquery('SELECT * FROM titanic WHERE name=Miss. Ellen O\\'\\'Dwyer;')"
    ]
   },
   {
